# mortar

./: .env.bak  .env.swo  .env.swp  .gitignore  .gitignore.swp  Cargo.toml  Dockerfile  README.md  base.env  docker-build.sh  docker-compose.yml  setup.sh
bricks/: .hello.sh.swp  echo_params.sh  echo_payload.sh  test_invocation.sh  test_params.sh  test_payload.sh  webhook_test.sh
migrations/: 20250726144234_create_bricks_table.down.sql  20250726144234_create_bricks_table.up.sql
src/: db.rs  handler.rs  handlers.rs  main.rs  model.rs  schema.rs  structs.rs
test_invocations/: bash_test.sh  create_brick.sh
test_scripts/: create_brick.sh  delete_brick.sh  hello.sh  patch_brick.sh  put_brick.sh  test_invoke.sh  test_params.sh  test_payload.sh
