[package]
name = "mortar"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = "1"
serde_json = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = "0.4" 
tracing-subscriber = "0.3"

