[package]
name = "mortar"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
chrono = { version = "0.4.38", features = ["serde"] }
tower-http = {version = "0.6.2", features = ["cors"]}
uuid = { version = "1.10.0", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.9"

[package.metadata.cargo-features]
pie = false
